# Plexicon

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.markdown  TODO  aclocal.m4  configure  configure.in  install-sh  missing  plexicon.desktop.in
license/: COPYING  Makefile.am  Makefile.in
resource/: Makefile.am  Makefile.in
resource/BlackPaintSplatter/: Makefile.am  Makefile.in
resource/BlackSquare/: Makefile.am  Makefile.in
resource/BlueandWhite/: Makefile.am  Makefile.in
resource/GreySquare/: Makefile.am  Makefile.in
resource/pixmap/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  data.py  database.py  getdata.py  gui.py  interface.py  parser.py  path.py  plexicon.in  plexicon.py  sound.py  tts.py
src/gui/: InputGui.py  Makefile.am  Makefile.in  OutputGui.py  buttons.py  error.py  favourite.py  inputGui.py  outputGui.py  spinner.py
src/lang/: Makefile.am  Makefile.in
src/lang/bengali/: Makefile.am  Makefile.in  bengali.py  design.py
src/lang/english/: Makefile.am  Makefile.in  design.py  english.py
